<resources>
    <string name="app_name">PDA Compass</string>
    <string name="item_bandage">Bandage</string>
    <string name="desc_bandage">Instant health restore 10%</string>
    <string name="item_medkit">Medkit</string>
    <string name="desc_medkit">Instant health restore 20%</string>
    <string name="item_army_medkit">Army Medkit</string>
    <string name="desc_army_medkit">Instant health restore 20%</string>
    <string name="item_vinca">Vinca</string>
    <string name="desc_vinca">Instant health restore 40%, removes 1 Sv of obtained radiation</string>
    <string name="item_scientific_medkit">Scientific Medkit</string>
    <string name="desc_scientific_medkit">Instant health restore 50%, removes 3 Sv of obtained radiation</string>
    <string name="item_vodka">Vodka Cossacks</string>
    <string name="desc_vodka">Removes 1 Sv of obtained radiation, drops 10% of health</string>
    <string name="item_antirad">Anti-rad</string>
    <string name="desc_antirad">Removes 7 Sv of obtained radiation, drops 20% of health</string>
    <string name="item_anabiotic">Anabiotic</string>
    <string name="desc_anabiotic">Eleminates emission effect, drops 30% of health</string>
    <string name="item_b190">B190 Radioprotectant</string>
    <string name="desc_b190">Eliminates radiation effect for 1 minute</string>
    <string name="item_psyblock">Psy-block</string>
    <string name="desc_psyblock">Eliminates mental effect for 1 minute</string>
    <string name="item_ip2">IP2 antidote</string>
    <string name="desc_ip2">Eliminates anomaly effect for 1 minute</string>
    <string name="item_hercules">Hercules</string>
    <string name="desc_hercules" formatted="false">Health restores 50% faster in clear locations, if less than 1 Sv is obtained. Lasts for 30 minutes</string>
    <string name="item_energy_drink">Energy Drink Stalker</string>
    <string name="desc_energy_drink" formatted="false">Health restores 100% faster in clear locations, if less than 1 Sv is obtained. Lasts for 30 minutes</string>
    <string name="item_green_svoboda">Green Svoboda serum</string>
    <string name="desc_green_svoboda" formatted="false">Radiation obtains 90% slower for 2 hours</string>
    <string name="item_yellow_svoboda">Yellow Svoboda serum</string>
    <string name="desc_yellow_svoboda">Mental strength 90% lower for 2 hours</string>
    <string name="item_binocl">Binoculars</string>
    <string name="desc_binocl">Unlocked: binoculars of any type.</string>
    <string name="item_optics">Optics</string>
    <string name="desc_optics">Unlocked: any optics for any weapon.</string>
    <string name="item_collimator">Collimator</string>
    <string name="desc_collimator">Unlocked: any collimator for any weapon.</string>
    <string name="item_night_vision">Night Vision</string>
    <string name="desc_night_vision">Unlocked: any night vision device or optics for any weapon.</string>
    <string name="item_walkie_talkie">Walkie Talkie</string>
    <string name="desc_walkie_talkie">Unlocked: any portable radio station.</string>
    <string name="item_grenade_launcher">Grenade launcher</string>
    <string name="desc_grenade_launcher">Unlocked: any fittable or not grenade launcher.</string>
    <string name="item_shlem1">Psionic helmet Mark 1</string>
    <string name="desc_shlem1">Mental strength 99% lower, Controller is 30% weaker for 30 minutes.</string>
    <string name="item_shlem2">Psionic helmet Mark 2</string>
    <string name="desc_shlem2">Mental strength 99% lower, Call of monolith strength 99% weaker, Controller is 60% weaker for 1 hour.</string>
    <string name="item_respirator">Respirator</string>
    <string name="desc_respirator" formatted="false">Radiation obtains 40% slower for 30 minutes.</string>
    <string name="item_gasmask">Gasmask</string>
    <string name="desc_gasmask" formatted="false">Radiation obtains 60% slower for 1 hour.</string>
    <string name="item_szd">Rebreather</string>
    <string name="desc_szd" formatted="false">Radiation obtains 99% slower for 1 hours.</string>
    <string name="item_knife">Battle knife</string>
    <string name="desc_knife">Unlocked: any knife.</string>
    <string name="item_pistol">Pistol</string>
    <string name="desc_pistol">Unlocked: any pistol, only pistol ammo can be used with.</string>
    <string name="item_shotgun">Shotgun</string>
    <string name="desc_shotgun">Unlocked: any shotgun, only buckshot ammo can be used with.</string>
    <string name="item_submachinegun">Submachinegun</string>
    <string name="desc_submachinegun">Unlocked: any submachinegun, only pistol ammo can be used with.</string>
    <string name="item_ak">Assault AK type gun</string>
    <string name="desc_ak">Unlocked: any AK assault gun, only AK ammo can be used with.</string>
    <string name="item_m4">Assault NATO type gun</string>
    <string name="desc_m4">Unlocked: any NATO assault gun, only NATO ammo can be used with.</string>
    <string name="item_val">Silenced gun</string>
    <string name="desc_val">Unlocked: any silenced gun, only silenced ammo can be used with.</string>
    <string name="item_sniper">Sniper gun</string>
    <string name="desc_sniper">Unlocked: any sniper gun, only sniper ammo can be used with.</string>
    <string name="item_machinegun">Machinegun</string>
    <string name="desc_machinegun">Unlocked: any machinegun, only assault ammo can be used with. NOT APPLICABLE FOR LONERS.</string>
    <string name="item_gauss_gun">Gauss gun</string>
    <string name="desc_gauss_gun">Unlocked: any gauss gun, only gauss ammo can be used with.</string>
    <string name="item_dead_rat">Dead rat</string>
    <string name="desc_dead_rat">No meaning, no expirience. Just dead rat.</string>
    <string name="item_bread">White bread</string>
    <string name="desc_bread">1 expirience point.</string>
    <string name="item_sausage">Sausage</string>
    <string name="desc_sausage">2 expirience points.</string>
    <string name="item_canned_meat">Canned meat</string>
    <string name="desc_canned_meat">3 expirience points.</string>
    <string name="item_red_devil">Shitty energy drink</string>
    <string name="desc_red_devil">4 expirience points.</string>
    <string name="item_doktorskaja">Tasty sausage</string>
    <string name="desc_doktorskaja">5 expirience points.</string>
    <string name="item_delikates">Canned delicate food</string>
    <string name="desc_delikates">6 expirience points.</string>
    <string name="item_9mm">9mm bullets</string>
    <string name="desc_9mm">For pistols or revolvers of any type.</string>
    <string name="item_12cal">12cal buckshots</string>
    <string name="desc_12cal">For shotguns of any type.</string>
    <string name="item_545ak">Bullets for AK rifles</string>
    <string name="desc_545ak">For Kalashnikov of any type.</string>
    <string name="item_556nato">Bullets for NATO rifles</string>
    <string name="desc_556nato">For NATO rifles of any type.</string>
    <string name="item_9val">Bullets for VAL rifles</string>
    <string name="desc_9val">Special ammo for VAL or Vintorez silenced rifles.</string>
    <string name="item_762">Bullets for sniper rifles</string>
    <string name="desc_762">For sniper rifles of any type.</string>
    <string name="item_atom">Bullets for gauss rifles</string>
    <string name="desc_atom">For gauss rifles of any type. Can be radioactive.</string>
    <string name="item_bigbk">Big box with ammo</string>
    <string name="desc_bigbk">Many things inside. Can be very useful.</string>
    <string name="item_f1">F1 grenade</string>
    <string name="desc_f1">Good against other stalkers.</string>
    <string name="item_limonka">HE grenade</string>
    <string name="desc_limonka">Good in any unclear situations.</string>
    <string name="item_incend">Incendiary grenade</string>
    <string name="desc_incend">Good for burn some enemies.</string>
    <string name="item_podgren">Underbarrel grenade</string>
    <string name="desc_podgren">One shot for your grenade launcher.</string>
    <string name="item_garmoshka">Mouth organ</string>
    <string name="desc_garmoshka">Quest: 4 expirience points.</string>
    <string name="item_bag">Sleeping bag</string>
    <string name="desc_bag">Quest: 5 expirience points.</string>
    <string name="item_gasoline">Gasoline canister</string>
    <string name="desc_gasoline">Quest: 10 expirience points.</string>
    <string name="item_maps">Old map</string>
    <string name="desc_maps">Quest: 15 expirience points.</string>
    <string name="item_guitar">Old guitar</string>
    <string name="desc_guitar">Quest: 20 expirience points.</string>
    <string name="item_instruments">Tool box</string>
    <string name="desc_instruments">Quest: 30 expirience points.</string>
    <string name="item_psionic_device">Unknown device</string>
    <string name="desc_psionic_device">Quest: 40 expirience points.</string>
    <string name="item_pda">PDA with some information</string>
    <string name="desc_pda">Quest: 50 expirience points.</string>
    <string name="item_leather_jacket">Leather jacket</string>
    <string name="desc_leather_jacket" formatted="false">Radiation obtains 10% slower for 1 hour of any damage</string>
    <string name="item_stalker_suit">Stalker suit</string>
    <string name="desc_stalker_suit">Radiation obtains 30% slower, anomaly effect 20% less, mental effect 10% less for 2 hours of any damage</string>
    <string name="item_seva_suit">SEVA suit</string>
    <string name="desc_seva_suit">Radiation obtains 50% slower, anomaly effect 40% less, mental effect 30% less for 2 hours of any damage</string>
    <string name="item_exoskeleton">Exoskeleton</string>
    <string name="desc_exoskeleton">Health restores 100% faster in clear locations, when less than 1 Sv of radiation is obtained, radiation obtains 30% slower, anomaly effect 40% less, mental effect 20% less for 2 hours of any damage</string>
    <string name="item_ssp99">SSP-99 Ecologist</string>
    <string name="desc_ssp99">Radiation obtains 80% slower, anomaly effect 60% less, mental effect 40% less for 1 hour of any damage</string>
    <string name="item_merc_suit">Merc suit</string>
    <string name="desc_merc_suit">Fractional: Worn off after 3 hours of any damage. Radiation obtains 30% slower, anomaly effect 20% less, mental effect 10% less</string>
    <string name="item_monolith_suit">Monolith suit</string>
    <string name="desc_monolith_suit">Fractional: Worn off after 3 hours of any damage. Radiation obtains 30% slower, anomaly effect 20% less, resist to mental 99%</string>
    <string name="item_bandit_suit">Bandit suit</string>
    <string name="desc_bandit_suit">Fractional: Worn off after 3 hours of any damage. Radiation obtains 30% slower, anomaly effect 20% less, mental effect 10% less</string>
    <string name="item_duty_suit">Duty suit</string>
    <string name="desc_duty_suit">Fractional: Worn off after 3 hours of any damage. Radiation obtains 30% slower, anomaly effect 20% less, mental effect 10% less</string>
    <string name="item_vuzov_suit">Vuzov suit</string>
    <string name="tray_vibro">Vibration</string>
    <string name="tray_compass">Compass</string>
    <string name="tray_orientation">Orientation</string>
    <string name="tray_portrait">Portrait</string>
    <string name="tray_landscape">Landscape</string>
    <string name="close_info">Closes current window.</string>
    <string name="tray_permissions">Permissions</string>
    <string name="gps_permission">Gps permission granted</string>
    <string name="gps_background_permission">Gps background permission granted</string>
    <string name="notifications_permission">Notification permissions granted</string>
    <string name="devices_nearby_permission">"Devices nearby" permission granted</string>
    <string name="development_mode">Development mode enabled.</string>
    <string name="wifi_throttling">Wifi scanning restrictions disabled</string>
</resources>